@@ -63,6 +63,8 @@ with any browser.
 .It Fl a
 .It Fl -alphabet
 Make an alphabetical function index, suitable for a large project.
+.It Fl -caution
+Include caution message to prohibit downloading.
 .It Fl c
 .It Fl -compact
 Compress html files  by
